syntax = "proto3";

package api.v1;

import "google/protobuf/descriptor.proto";

option go_package = "api/v1";

extend google.protobuf.ServiceOptions {
    optional ServiceExtend service_extend = 63500;
}

extend google.protobuf.MethodOptions {
  optional MethodExtend method_extend = 63501;
}

enum AuthMethod {
  AUTH_METHOD_UNSPECIFIED = 0;
  // IAM uses the standard IAM authorization check on the organizational resources.
  IAM = 1;
  // Custom authorization method.
  CUSTOM = 2;
}

message ServiceExtend {
  string service_signature = 1;
  bool allow_without_credential = 2;
  string permission = 3;
  AuthMethod auth_method = 4;
  bool audit = 5;
}

message MethodExtend {
  string method_signature = 1;
  bool allow_without_credential = 2;
  string permission = 3;
  AuthMethod auth_method = 4;
  bool audit = 5;
}